# Barbara

./: .breakpoints  .gitignore  .replit  LICENSE.md  README.md  autorestart.sh  code.py  constants.py  docs.md  keep_alive.py  lang.json  main.py  meese.py  package-lock.json  package.json  pickup_lines.py  pyproject.toml  replit.nix  requirements.txt  result  run.sh  runtime.txt  secret_messages.py  servers.json  servers.txt  setup.sh  test.sh  util.py
AI stuff/: index.js  traingingdata.js
cogs/: adminCommand.py  age.py  basicCommands.py  channel.py  commandErrorHandler.py  configCommand.py  diamond.py  diamond.py.disabled  evalCommand.py  evalCommand.py.deprecated  fitness.py  huggingfaceAI.py  init.py.deprecated  messageSendingCommands.py  messages.py  otherEasterEggs.py  randomMessageCommands.py  reactionCommand.py  removeMeese.py  removeNSFW.py  serverInfo.py  template.txt  vcBanBots.py  vcCommand.py  websiteScreenshotter.py  websiteStuff.py  welcome.py  wikipedia.py.disabled  wwhs.py
commands/: Cconfig.py  Ceval.py  Chelp.py  __init__.py  admin.py  age.py  breakup.py  config.py  credits.py  eval.py  fact.py  help.py  hibarbara.py  init.py  invite.py  link.py  log.py  meesedetect.py  music.py  pickup.py  prefix.py  prompt.py  reaction.py  reload.py  removemeese.py  reshuffle.py  restart.py  say.py  sayb.py  secret.py  static_commands.py  template.py  truth.py  vc.py
config/: backup.json  config.json  config.py  default_config.json  global_config.json  type_config.json
extensions/: api.py  diamond.py  error_handler.py  log.py  meese_detector.py  meese_lib.py  permissions.py  server_info.py  statistics.py  welcome.py
lib/: LCG.py  admin.py  configLib.py.incomplete  customErrors.py  directoryVars.py  dream.py  evalUtils.py  getName.py  graph.py  help.py  huggingface.py  introductions.py  keep_alive.py  lib.py  meese.py  messages.py  paginator.py  random_msg.py  randommer.py  regexLib.py  shell.py  voiceLib.py
resources/: barbara_secrets.txt  botwinkle_secrets.txt  breakup_lines.txt  breakups.txt  callum's favorite pickups that we don't need.txt  cmd_template.py  credits.txt  help.txt  (+15 more)
(+176 files in other folders)
