[tool.poetry]
name = "barbara-backend-dev"
version = "3.0.13"
description = "This is the release version of Barbara, it mostly works. Barbara is no longer being actively developed, but I still encourage you to try out her amazing commands!"
authors = ["turnip123 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
discord-components = "^1.1.4"
PyNaCl = "^1.4.0"
aiohttp = "^3.7.4"
yarl = "^1.6.3"
discord = "^1.7.3"
utils = "^1.0.1"
humanize = "^3.11.0"
urllib3 = "^1.26.6"
appdirs = "^1.4.4"
pyppeteer-stealth = "^2.7.3"
pyppeteer = "^0.2.6"
console = "^0.9907"
psutil = "^5.8.0"
pandas = "^1.3.2"
pymediawiki = "^0.7.0"
Unidecode = "^1.3.2"
aiodns = "^3.0.0"
Brotli = "^1.0.9"
cchardet = "^2.1.7"
orjson = "^3.6.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
