[tool.poetry]
name = "repl_python3_Barbarav4"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
console = "^0.9907"
nextcord = "^2.0.0-alpha.6"
PyNaCl = "^1.5.0"
Brotli = "^1.0.9"
aiodns = "^3.0.0"
cchardet = "^2.1.7"
aiohttp = "^3.8.1"
PyYAML = "^6.0"
Unidecode = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
